--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"license": "MIT",
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "vite dev --host",
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -38,7 +38,9 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"barqode": "^0.0.2",
 		"pocketbase": "^0.25.1",
+		"sveaflet": "^0.1.4",
 		"svelte-i18n": "^4.0.1",
 		"zod": "^3.23.8"
 	}
