--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
 	"i18n-ally.localesPaths": ["src/lib/i18n", "src/lib/i18n/locales"],
-	"i18n-ally.keystyle": "nested"
+	"i18n-ally.keystyle": "nested",
+	"postman.settings.dotenv-detection-notification-visibility": false
 }
