--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@ node_modules
 .output
 .vercel
 /.svelte-kit
-/build
 
 # OS
 .DS_Store
@@ -21,4 +20,8 @@ vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 
 # Pocketbase
-./pocketbase/pb_data
+pocketbase/pb_data
+pocketbase/pb_public
+
+# VSCode
+.vscode
