--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: Install dependencies
         run: npm install
@@ -19,3 +21,11 @@ jobs:
         env:
           PUBLIC_POCKETBASE_HOST: ${{ secrets.PUBLIC_POCKETBASE_HOST }}
           PUBLIC_OPENROUTE_API_KEY: ${{ secrets.PUBLIC_OPENROUTE_API_KEY }}
+
+      - name: Commit and Push changes
+        uses: EndBug/add-and-commit@v9
+        with:
+          author_name: github-actions[bot]
+          author_email: github-actions[bot]@users.noreply.github.com
+          message: 'Build static site'
+          add: '.'
