--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,8 @@ name: Build static site to pb_public
 on:
   push:
     branches: [main]
+    paths-ignore:
+      - 'pocketbase/pb_public/**'
   workflow_dispatch:
 
 jobs:
@@ -22,10 +24,10 @@ jobs:
           PUBLIC_POCKETBASE_HOST: ${{ secrets.PUBLIC_POCKETBASE_HOST }}
           PUBLIC_OPENROUTE_API_KEY: ${{ secrets.PUBLIC_OPENROUTE_API_KEY }}
 
-      - name: Commit and Push changes
+      - name: Commit and Push built files
         uses: EndBug/add-and-commit@v9
         with:
           author_name: github-actions[bot]
           author_email: github-actions[bot]@users.noreply.github.com
           message: 'Build static site'
-          add: '.'
+          add: 'pocketbase/pb_public'
