--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@types/mapbox__polyline": "^1.0.5",
 		"autoprefixer": "^10.4.20",
 		"daisyui": "^4.12.23",
 		"eslint": "^9.18.0",
@@ -39,6 +40,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@mapbox/polyline": "^1.2.1",
 		"@sjmc11/tourguidejs": "^0.0.27",
 		"barqode": "^0.0.2",
 		"pocketbase": "^0.25.1",
